*** netmeta, version 6.6-6, 2019-mm-dd ***

 ** Major changes **

  * Use roxygen2 for development of R package netmeta

  * New function plot.netrank() to produce image plot of P-scores
    
 ** Bug fixes **

  * netmeta():
    - no error if argument 'studlab' is missing
    - tackle numerical problems with zero treatment arm variances -
      actually by changes in internal function multiarm()

  * netmetabin():
    - only drop single treatment arms without any events in multi-arm
      studies instead of the complete design (which is the correct
      behaviour only for two-arm studies)
    - keep the original design for multi-arm studies if a single
      treatment arm without any events has been dropped, e.g., the
      design X:Y:Z is not changed to X:Z if no events were observed in
      treatment arm Y in any multi-arm study
    - no error if argument 'event1' is not an R object created with
      pairwise() and argument 'data' is not used
    - no error in printing of network meta-analysis object if argument
      'event1' is not an R object created with pairwise()

  * netgraph():
    - argument 'seq' equal to "optimal" works for a single design

  * pairwise():
    - no error if function is used without argument 'data'

 ** User-visible changes **

  * netgraph():
    - new argument 'bg.points'
    - new argument 'scale.highlight' which replaces argument
      'lwd.highlight' (which actually was ignored)
    - arguments 'col.highlight' and 'scale.highlight' can be vectors
      with same length as argument 'highlight'

  * forest.netmeta():
    - new argument 'labels' to provide treatment names - similar to
      netgraph()
    - labels set automatically for columns "pscore", "k" and
      "prop.direct" in argument 'leftcols' and 'rightcols'

 ** Internal changes **

  * multiarm():
    - use ginv() to calculate inverse of matrix Lt
    - set very small negative values in matrix W equal to zero
    - object k instead of n denotes number of treatment arms